# lumaris_marketplace

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  matchmaking_design.md
.github/: dependabot.yml
.github/workflows/: devskim.yml  django.yml  ossar.yml  pylint.yml  python-package-conda.yml  rust-clippy.yml  security-quality.yml  security.yml
lumaris_frontend/: manage.py  pytest.ini  requirements.txt
lumaris_frontend/lumaris_frontend/: asgi.py  settings.py  urls.py  wsgi.py
lumaris_frontend/marketplace/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
lumaris_frontend/marketplace/migrations/: 0001_initial.py
lumaris_frontend/marketplace/tests/: test_jobs.py
lumaris_frontend/static/css/: style.css
lumaris_frontend/static/js/: main.js
lumaris_frontend/templates/: base.html  landing.html
lumaris_frontend/templates/registration/: login.html  signup.html
marketplace/: .env.example  README.md  config.toml  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
marketplace/admin_api/: auth.py  database.py  jobs.py  main.py  matchmaking.py  metrics.py  models.py  nodes.py  rate_limiter.py  reputation.py  schemas.py  websocket.py
marketplace/admin_api/routes/: __init__.py  reputation.py
marketplace/admin_dashboard/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
marketplace/admin_dashboard/dashboard/: settings.py  urls.py
marketplace/admin_dashboard/marketplace_monitor/: api_client.py  apps.py  models.py  urls.py  views.py  ws_client.py
marketplace/admin_dashboard/nginx/conf.d/: default.conf
marketplace/admin_dashboard/static/css/: custom.css
marketplace/admin_dashboard/static/js/: dashboard.js
marketplace/admin_dashboard/templates/marketplace_monitor/: base.html  dashboard.html  login.html  marketplace_stats.html  node_detail.html  nodes.html  transactions.html  vm_detail.html  vms.html
marketplace/admin_dashboard/templates/marketplace_monitor/partials/: marketplace_stats_cards.html  nodes_table.html  transactions_table.html  vms_table.html
marketplace/distributed_engine/: Cargo.toml  README.md
marketplace/distributed_engine/src/: error.rs  lib.rs  tests.rs
marketplace/gui/: README.md  main.py  requirements.txt
marketplace/nginx/conf.d/: default.conf
marketplace/nginx/ssl/: README.md
marketplace/node_ws/: Cargo.toml  README.md
marketplace/node_ws/src/: api_client.rs  auth.rs  config.rs  error.rs  http_client.rs  job_scheduler.rs  main.rs  matchmaker.rs  vm_manager.rs  ws_handler.rs
marketplace/node_ws/src/api_client/: legacy.rs  mod.rs  tests.rs
marketplace/node_ws/src/buyer_stats/: mod.rs
marketplace/node_ws/src/seller_stats/: mod.rs
marketplace/node_ws/src/vm_manager/: mod.rs  tests.rs
marketplace/node_ws/src/ws_client/: mod.rs  tests.rs
marketplace/node_ws/src/ws_handler/: mod.rs  tests.rs
marketplace/rust_gui/: Cargo.toml  README.md
marketplace/rust_gui/src/: main.rs  stats_sender.rs
marketplace/tests/: README.md  conda_setup.md  conftest.py  requirements.txt  run_tests.sh  test_api_integration.py  test_jobs.py  test_reputation.py  test_websocket.py  test_websocket_heartbeat.py
