[workspace]
members = [
    "marketplace/node_ws",
    "marketplace/rust_gui",
    "marketplace/distributed_engine",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.26"
tokio-tungstenite = "0.26"
url = "2.4"
ureq = "3.0"
sysinfo = { version = "0.35", features = ["multithread"] }
hostname = "0.4"
futures-util = "0.3"
warp = "0.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

