[package]
name = "node_ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket server for Lumaris Marketplace node connections"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tungstenite = { workspace = true }
ureq = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
hostname = { workspace = true }
warp = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
distributed_engine = { path = "../distributed_engine" }
toml = "0.8"
chrono = "0.4"
