[package]
name = "node_ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket server for Lumaris Marketplace node connections"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
serde_json = { workspace = true }
tungstenite = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
hostname = { workspace = true }
warp = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
distributed_engine = { path = "../distributed_engine" }
toml = "0.8"
chrono = "0.4"
uuid = { version = "1.4", features = ["v4"] }
dotenv = "0.15"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"

