[package]
name = "node_ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket server for Lumaris Marketplace node connections"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
dotenv = "0.15"
colored = "2.1"
rand = "0.8"
url = "2.5"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
