[package]
name = "rust_gui"
version = "0.1.0"
edition = "2021"
description = "GUI dashboard for Lumaris Marketplace with buyer and seller roles"

[dependencies]
eframe = { version = "0.23", features = ["wgpu"] }
egui = "0.31"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tungstenite = { workspace = true }
tokio-tungstenite = "0.26"
tokio = { version = "1.45", features = ["full"] }
url = { workspace = true }
hostname = { workspace = true }
ureq = { workspace = true }
sysinfo = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"

