[package]
name = "rust_gui"
version = "0.1.0"
edition = "2021"
description = "GUI dashboard for Lumaris Marketplace with buyer and seller roles"

[dependencies]
eframe = { version = "0.23", features = ["wgpu"] }
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.21"
tokio-tungstenite = "0.21"
tokio = { version = "1.45", features = ["full"] }
url = "2.5"
hostname = "0.3"
ureq = "2.9"
sysinfo = "0.30"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
